--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 *.properties
 target/m2e-wtp/web-resources/META-INF/maven/com.myshop/cm/pom.properties
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
