filter-mapping 수정ㅈ
filter-mapping 수정ㅈ

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter>
+	</filter-mapping>
 
 	<!-- Error 설정 -->
 	<error-page>
