--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/mypage/order_history.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/seller/ajaxgoodsqnadetail.jsp=UTF-8
